    optimizing the screen usage in the newt frontend.
  * Fix the computation and usage of the window's height. If the height is not
    computed correctly, the newt frontend may decide to put the input box and
    the explanatory text on the same window, but the text will overlap on the
    input box, which renders the input impossible.
    Closes: #508042, #507372, #343119

 -- Frans Pop <fjp@debian.org>  Sun, 05 Apr 2009 00:43:10 +0200

cdebconf (0.139) unstable; urgency=low

  * Fix potential crash if a configuration file element contains printf
    formatting characters.
  * Remove unnecessary assignment in rfc822db_question_set.
  * Fix pointer arithmetic bug in plugin_iterate that meant that only one
    plugin would ever be returned by CAPB (and probably also caused a minor
    buffer overflow, although not exploitable in the context of d-i).
  * Mark parent halves of confmodule communication pipes close-on-exec.
  * Move newt initialisation into new cdebconf_newt_setup function, exported
    for the benefit of cdebconf-newt-terminal.
  * Export a new cdebconf_newt_get_progress_info function so that
    cdebconf-newt-terminal can reinitialise progress bars (since there's no
    progress_info member in struct frontend, and it won't fit in the obvious
    place without breaking the plugin ABI).

  [ Updated translations ]
  * Basque (eu.po) by Piarres Beobide
  * Galician (gl.po) by Marce Villarino
  * Kazakh (kk.po) by daur88
  * Malayalam (ml.po) by Praveen Arimbrathodiyil
  * Marathi (mr.po) by Sampada
  * Thai (th.po) by Theppitak Karoonboonyanan
  * Tagalog (tl.po) by Eric Pareja

 -- Colin Watson <cjwatson@debian.org>  Sun, 15 Feb 2009 20:50:56 +0000

cdebconf (0.138) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Do not drop translations that are defined as fall-back languages for the
    currently selected language. Closes: #502240, #502244.

 -- Frans Pop <fjp@debian.org>  Mon, 01 Dec 2008 06:41:23 +0100

cdebconf (0.137) unstable; urgency=low
