@@ -12,6 +12,9 @@ cdebconf (0.140) UNRELEASED; urgency=low
     the explanatory text on the same window, but the text will overlap on the
     input box, which renders the input impossible.
     Closes: #508042, #507372, #343119
+  * Optimize the screen usage (2 lines) in the newt frontend when a
+    description and select menu are on the same windows or when a big select
+    menu is displayed on its own window.
 
  -- Frans Pop <fjp@debian.org>  Sun, 05 Apr 2009 00:43:10 +0200
 
